push of recent changes:
issue 286: windows thread creation false positives: unaddr, uninit, and leaks
Fixed multiple false positives reported for each thread creation on Windows:
* set shadow defined for new thread TEB by querying post-NtCreateThread
  (TEB is allocated by kernel so we never see its allocation)
* set shadow unaddr for thread TEB dealloc on thread exit
* set full range of kernel-written stack on Ki routine
* set below-TOS to defined and beyond-TOS to unaddr in thread init,
  which required augmenting issue 117 to support getting
  the mcontext on (non-primary thread) thread init
* in DR r368: fixed bug in interception buffer mapping where the jmp back
  was also considered on the original app code side, causing the bb after
  an interception to be hidden from the client, resulting in false
  positives b/c Dr. Memory did not see some KiAPC code!
* set register shadow values based on NtContine CONTEXT
* suppressed RtlAllocateActivationContextStack leak that shows
  up with _beginthreadex() under the assumption that it's a false positive:
  but see Issue 8 where suppressed leaks still show up by default!
* fixed erroneous 1 arg listed for 0-arg windows syscalls: showed up
  as NtTestAlert uninit for new threads

other changes of note:
* fixed bug in reporting whether an unaddr error refers to the delayed free
  queue
* use disp instead of abs addr for shadow table: shrinks instrumentation size



SVN-Revision: 23

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -770,6 +770,7 @@ else (UNIX)
   if (NOT USE_DRSYMS)
     install(CODE "configure_file(\"${DynamoRIO_DIR}/../bin32/drconfig.exe\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/bin32/drconfig.exe\" COPYONLY)")
     install(CODE "configure_file(\"${DynamoRIO_DIR}/../bin32/drinject.exe\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/bin32/drinject.exe\" COPYONLY)")
+    install(CODE "configure_file(\"${DynamoRIO_DIR}/../bin32/drrun.exe\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/bin32/drrun.exe\" COPYONLY)")
   endif (NOT USE_DRSYMS)
   install(CODE "configure_file(\"${DynamoRIO_DIR}/../bin32/drconfiglib.dll\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/bin32/drconfiglib.dll\" COPYONLY)")
   install(CODE "configure_file(\"${DynamoRIO_DIR}/../bin32/drinjectlib.dll\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/bin32/drinjectlib.dll\" COPYONLY)")
