i#284: support multiple sets of malloc routines * cygwin1.dll malloc, etc. do not use win32 API and hence need separate   interception * i#284: Windows debug CRT requests extra padding for debug purposes   that Dr. Memory then thinks is part of the real malloc: so   Dr. Memory needs to intercept the outer layer even though it calls   the Rtl routine * intercepting all routines and handling recursion, like I was before   for malloc routines calling each other * using module load/unload to intercept malloc routines * support for multiple sets of malloc, and for users storing   client data for each (used in this tree for free queue per malloc set) * many of these malloc routines do not have a malloc_usable_size()   (cygwin and linux do, but not msvcrt): they have _msize() which is   the requested not the padded size * ifdef WINDOWS no longer implies Rtl * need a separate free queue per set of malloc routines * assuming that all but cygwin malloc end up calling Rtl routines,   so no separate initial heap walk is needed * this diff is also much of the work to support API for custom malloc * with /MTd libc is statically linked so online symbols is   required for this diff: fortunately I added that support to Windows a   while back.  static libc is rarer on linux fortunately. * disasbled perl2exe on Windows since no longer used * added wincrt and wincrtdbg tests
Also: intercept _dbg versions of malloc routines
* required to avoid false positive unaddrs for apps using debug version of
  msvcrt
* added new types for the _dbg routines since they take additional params
* generalized heap arg to "auxarg" to cover both heap for Rtl and blocktype
  for _dbg; passed to client_handle_free, used in delay free queue,
  and used when querying size
* added recursion-nop checks to validate and userinfo routines
* added a few explicit _dbg calls to tests/wincrt, but the existing
  wincrtdbg build already turns regular calls to _dbg calls
* eliminates the extra unaddrs in tests/wincrtdbg


--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ else (TOOL_DR_HEAPSTAT)
   set(toolname_cap_spc "Dr. Memory")
   set(DEFINES ${DEFINES} -DTOOL_DR_MEMORY)
   # should we have a real .rc file instead?
-  set(VERSION_NUMBER "1.1.0")
+  set(VERSION_NUMBER "1.2.0")
   set(DRSYMS_DEFAULT ON)
 endif (TOOL_DR_HEAPSTAT)
 
@@ -120,20 +120,24 @@ if (WIN32)
     endif (PERL_FOUND)
   endif ()
 
-  if (EXISTS "${PERL_PATH}/pp")
-    set(PERL_PP "${PERL_PATH}/pp" CACHE FILEPATH
-      "Path to perl PAR module's perl-to-executable tool 'pp'")
-  else ()
-    find_file(PERL_PP pp HINTS "${PERL_PATH}"
-      DOC "Path to perl PAR module's perl-to-executable tool 'pp'")
-  endif ()
-  if (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
-    message(STATUS "Did not find pp: will not convert perl scripts to executables")
-    set(PERL_TO_EXE OFF)
-  else (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
-    message(STATUS "Found pp: ${PERL_PP}")
-    set(PERL_TO_EXE ON)
-  endif (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
+  # With the new drinjectlib-based front end we do not use perl or perl2exe
+  # at all on Windows (xref i#265/PR 486139)
+  if (OFF) # disabling
+    if (EXISTS "${PERL_PATH}/pp")
+      set(PERL_PP "${PERL_PATH}/pp" CACHE FILEPATH
+        "Path to perl PAR module's perl-to-executable tool 'pp'")
+    else ()
+      find_file(PERL_PP pp HINTS "${PERL_PATH}"
+        DOC "Path to perl PAR module's perl-to-executable tool 'pp'")
+    endif ()
+    if (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
+      message(STATUS "Did not find pp: will not convert perl scripts to executables")
+      set(PERL_TO_EXE OFF)
+    else (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
+      message(STATUS "Found pp: ${PERL_PP}")
+      set(PERL_TO_EXE ON)
+    endif (PERL_PP-NOTFOUND OR NOT EXISTS "${PERL_PP}")
+  endif (OFF)
 endif (WIN32)
 
 # Dr. Memory only supports 32-bit today
