Issue 26: msvcrt operator delete makes assumptions about malloc layout * added support for selectively disabling redzones for individual sets of   malloc routines instead of being only a global setting * if _malloc_dbg is present in a module, assume malloc also uses the debug   allocator and allocates a large redzone of its own that stores a data   structure assumed to be prior to the malloc ptr by operator delete(): we   disable our redzone in that case * to avoid raising unaddr when delete reads malloc header, added   intercepting of delete and treating as alloc routine * to intercept delete had to augment drsyms with   drsym_enumerate_symbols(), since there are multiple "operator delete"   routines.  not using the more efficient SymSearch since to do would   involve requiring Debugging Tools for Windows just to build drsyms   extension: SymSearch is in dbghelp 6.2, while VS2005sp1 has only 6.1. * added test of delete with dbg crt to tests/wincrt.cpp * added note to docs that when debug info is not available,   an app with /MTd can show false positives and/or negatives
Related fixes:
* fixed deadlock with inner heap routine holding malloc lock and calling
  app size routine which grabs app lock, while outer heap routine holds app
  lock and then tries for malloc lock
* added changelog for Dr. Memory releases



SVN-Revision: 37

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2009 VMware, Inc.  All rights reserved.
+# Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -85,7 +85,7 @@ else (TOOL_DR_HEAPSTAT)
   set(toolname_cap_spc "Dr. Memory")
   set(DEFINES ${DEFINES} -DTOOL_DR_MEMORY)
   # should we have a real .rc file instead?
-  set(VERSION_NUMBER "1.2.1")
+  set(VERSION_NUMBER "1.2.2")
   set(DRSYMS_DEFAULT ON)
 endif (TOOL_DR_HEAPSTAT)
 
