issue 32: ASSERT: alloc.c:2359: real_size != -1 (error getting real size) * only interpret 0 as failure when using malloc_usable_size() * add malloc.c build with /MTd to suite: would have caught this error   (somehow msvcrt _msize returns 1 for malloc(0) while static _msize   returns 0) * the /MTd build showed a bug in malloc.c: was missing the   SetUnhandledExceptionFilter.  seems like the test should have been   failing from day one: not sure how it worked before.  found same problem   in infloop.c. * adding SetUnhandledExceptionFilter changed the line #'s so a bunch of   test .res files had to be changed; it also showed a missing clear   of in-heap data on exception (separate case to handle returning to heap   routine) * infloop change somehow made encrypted pointer go away and also resulted   in some nudge thread-related asserts that I fixed: stack including guard   page in set_thread_initial_structures() and adding to bb_table even when   no instrumentation was inserted b/c may still need to translate for a   synchall (for nudge here)
SVN-Revision: 46

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -295,6 +295,7 @@ if (NOT TOOL_DR_HEAPSTAT)
     if (USE_DRSYMS)
       # cygwin build can't see static malloc routines
       newtest_custbuild(wincrtdbg wincrt.cpp "/MTd")
+      newtest_custbuild(malloccrt malloc.c "/MTd")
     endif (USE_DRSYMS)
     # FIXME PR 406287: add /MDd test
   endif (WIN32)
