* use RelWithDebInfo instead of Release to get pdb for release build * kept Release for Linux since hit compile error on memset NDEBUG   with RelWithDebInfo and Linux release lib seems to have symbols
SVN-Revision: 49

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,13 @@ if ("${CMAKE_BUILD_TYPE}" MATCHES "Debug")
   set(DEFINES ${DEFINES} -DDEBUG -DSTATISTICS)
   set(DEBUG ON)
 else ()
-  set(CMAKE_BUILD_TYPE "Release")
+  if (UNIX)
+    # has enough debug info
+    set(CMAKE_BUILD_TYPE "Release")
+  else (UNIX)
+    # we want pdb for release build
+    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+  endif (UNIX)
   set(DEBUG OFF)
 endif ()
 
