use optionsx.h for option parsing and option structs in client * Dr. Memory now has optionsx-driven option data structures   and option parsing * optionsx.h still drives option usage messages for perl front end,   client, windows front end, and doxygen docs.   params taking values now say "-foo <int>" or "-foo <string>".
Leaving for future work:
* automate parsing in frontend.c: share with client options.c
* per-file options

SVN-Revision: 52

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -77,7 +77,12 @@ GENERATE_TESTLIST      = YES
 GENERATE_BUGLIST       = YES
 GENERATE_DEPRECATEDLIST= YES
 # choices: VMX86_SERVER, WINDOWS
-ENABLED_SECTIONS       = 
+# we use a bunch here for our option docs
+ENABLED_SECTIONS       = SCOPE_IS_PUBLIC_front SCOPE_IS_PUBLIC_side \
+                         SCOPE_IS_PUBLIC_post SCOPE_IS_PUBLIC_script \
+                         SCOPE_IS_PUBLIC_client TYPE_IS_BOOL_bool \
+                         TYPE_IS_STRING_opstring_t TYPE_HAS_RANGE_uint \
+                         TYPE_HAS_RANGE_int \
 MAX_INITIALIZER_LINES  = 30
 SHOW_USED_FILES        = YES
 SHOW_DIRECTORIES       = NO
