*nix syscall plumbing
SVN-Revision: 69

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -561,13 +561,20 @@ if (TOOL_DR_HEAPSTAT)
     "${PROJECT_BINARY_DIR}/${BUILD_BIN}/postleaks.pl" COPYONLY)
   set(script_aux ${script_aux} "${PROJECT_BINARY_DIR}/${BUILD_BIN}/postleaks.pl")
 else (TOOL_DR_HEAPSTAT)
+  set(defsupp_out "${PROJECT_BINARY_DIR}/${BUILD_BIN}/suppress-default.txt")
   if (WIN32)
-    set(defsupp "suppress-default.win.txt")
+    set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/suppress-default.win.txt")
+    configure_file("${defsupp_in}" "${defsupp_out}" COPYONLY)
   else (WIN32)
-    set(defsupp "suppress-default.lin.txt")
+    set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/suppress-default.lin.txt")
+    file(READ "${defsupp_in}" txt)
+    file(WRITE "${defsupp_out}" "${txt}")
+    if (VMKERNEL)
+      set(defsupp_vmk "${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DIR}/${tooldir}/suppress-default.vmk.txt")
+      file(READ "${defsupp_vmk}" txt)
+      file(APPEND "${defsupp_out}" "${txt}")
+    endif (VMKERNEL)
   endif (WIN32)
-  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${tooldir}/${defsupp}"
-    "${PROJECT_BINARY_DIR}/${BUILD_BIN}/suppress-default.txt" COPYONLY)
 endif (TOOL_DR_HEAPSTAT)
 
 ###########################################################################
