--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,7 +375,8 @@ if (NOT DEFINED DynamoRIO_DIR)
     "DynamoRIO installation's cmake directory")
 endif (NOT DEFINED DynamoRIO_DIR)
 
-find_package(DynamoRIO 1.4)
+set(DynamoRIO_REG_COMPATIBILITY ON)
+find_package(DynamoRIO 2.1)
 if (NOT DynamoRIO_FOUND)
   message(FATAL_ERROR "DynamoRIO package required to build")
 endif(NOT DynamoRIO_FOUND)
