i#69: realloc races lead to unaddr false positives PR 493888: realloc-freed memory not delayed with rest of delayed free queue * replace realloc with equivalent malloc+memcpy+free sequence to   solve both problems at once.  that code sequence is generated from   a template for each set of malloc routines, with a different template   for Rtl routines.   controlled by on-by-default -replace_realloc option * add synchronization to shadow block updates on special-to-non-special   transition: no other synch needed.  races on those updates led to   unaddr false positives and client memory leaks, observed in vobd. * added tests/realloc to test realloc and shadow races * store sets of alloc funcs for easy access to others in the set (need more   than just a size func pointer for realloc replacement i#69 and for i#51) * relies on DR r478 allowing DR-allocated memory as app memory
SVN-Revision: 89

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -300,6 +300,11 @@ if (NOT TOOL_DR_HEAPSTAT)
     # FIXME PR 406287: add /MDd test
   endif (WIN32)
 
+  newtest(realloc realloc.c)
+  if (UNIX)
+    target_link_libraries(realloc pthread)
+  endif (UNIX)
+
 else (NOT TOOL_DR_HEAPSTAT)
   newtest_ex(stale stale.c "" "-staleness;-stale_granularity 100" "" OFF)
 
