instrument auxiliary alloc routines: mallopt(), etc. * add handling for the simpler aux routines, the ones that just ask   for stats or tweak behavior or are identical to existing routines:   cfree, mallopt, mallinfo, malloc_stats, malloc_trim, malloc_get_state * add warnings on unhandled alloc routines * add tests/memalign.c that calls these routines
SVN-Revision: 90

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -305,6 +305,10 @@ if (NOT TOOL_DR_HEAPSTAT)
     target_link_libraries(realloc pthread)
   endif (UNIX)
 
+  if (UNIX)
+    newtest(memalign memalign.c)
+  endif (UNIX)
+
 else (NOT TOOL_DR_HEAPSTAT)
   newtest_ex(stale stale.c "" "-staleness;-stale_granularity 100" "" OFF)
 
